basic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: burger
  template:
    metadata:
      labels:
        app: burger
    spec:
      containers:
        - name: webserver
          image: nginx
