basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: basic-pod
spec:
  containers:
  - name: webserver
    image: nginx
