basic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burger-service
spec:
  selector:
    app: burger
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
