basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-burger
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: burger.fr.172.16.134.57.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: burger-service
            port: 
              number: 80
